--- a/pages/orderDetail/orderDetail.wxss
+++ b/pages/orderDetail/orderDetail.wxss
@@ -396,7 +396,7 @@ radio-group{
     height: 84rpx;
     background: #FFFFFF;
     border-radius: 12rpx;
-    border: 2rpx solid #DDDDDD;
+    border: 2rpx solid #307FF5;
     font-size: 32rpx;
     color: #307FF5;
     margin-right: 20rpx;
