--- a/components/dialog-cus/index.wxml
+++ b/components/dialog-cus/index.wxml
@@ -1,5 +1,19 @@
 <view wx:if="{{showDialog}}" class="cover" bind:tap="">
-	<view class="concent">
+	<view class="concent" wx:if="{{types == 1}}">
+		<view class="title">{{datas.title}} </view>
+		<view class="explain" style="margin-top: 20rpx">
+			<icon class="icon-box-img" type="info" size="20" color="#FF834A"></icon>
+			<view class="explain_lable">{{datas.titles}}</view>
+		</view>
+		<view class="textarea_view">
+			<textarea maxlength="100" style="padding: 20rpx;" bindinput="textareaAInput" placeholder="请填写关闭工单原因" value="{{description}}">    </textarea>
+		</view>
+		<view class="details">
+			<view class="cancel" bind:tap="dialogCloseCancel">{{datas.cancel||"取消"}}</view>
+			<view class="sure" bind:tap="dialogCloseSure">{{datas.sure||"确认"}}</view>
+		</view>
+	</view>
+	<view class="concent" wx:else>
 		<view class="title">{{datas.title}} </view>
 		<view class="explain">{{datas.titles}}</view>
 		<view class="details">
