--- a/pages/orderList/orderList.wxss
+++ b/pages/orderList/orderList.wxss
@@ -73,13 +73,13 @@
   }
 
   .new_p1_view{
-    /* width: 690rpx; */
+    width: 690rpx;
     background: #FFFFFF;
     border-radius: 12rpx;
     padding: 30rpx;
     margin-top: 30rpx;
-    margin-left: 30rpx;
-    margin-right: 30rpx;
+    /* margin-left: 30rpx;
+    margin-right: 30rpx; */
   }
   
   .new_p2{
@@ -134,6 +134,12 @@
   }
 
   .new_p3{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .new_p3_right{
     display: flex;
     justify-content: flex-end;
     align-items: center;
