--- a/pages/myOrder/myOrder.wxml
+++ b/pages/myOrder/myOrder.wxml
@@ -2,105 +2,7 @@
 <cu-custom bgColor="bg-white" isBack="{{false}}" isCustom="{{true}}">
   <view slot="content">我的工单</view>
 </cu-custom>
-<scroll-view scroll-x class="bg-white nav text-center" style="background-color: #FFF;position:fixed;top:9%;z-index:9999;">
-  <view class="cu-item {{index==TabCur?'text-blue cur':''}}" style="border-bottom: none;" wx:for="{{statusList}}" wx:key="index" catchtap="tabSelect" data-id="{{index}}">
-      <span >{{statusList[index]}}</span>
-      <span wx:if="{{index==0}}">({{statusNumber}})</span>
-  </view>
-</scroll-view>
-<view class="page">
-    <view class="new_p1">
-        <block wx:for="{{orderList}}" wx:key="index" wx:if="{{orderList.length > 0}}">
-            <view class="new_p1_view" bindtap="toInfo" data-id = "{{item.id}}" data-type="{{item.type}}">
-                <view class="new_p2" style="align-items: center;">
-                    <view class="new_p2_1">
-                        <view class="new_p2_title">{{item.service_type}}</view>
-                        <view class="new_p2_type" wx:if="{{item.is_send_order == 1}}">派单</view>
-                    </view>
-                    <view class="new_p2_status">{{item.status == 1 ? '进行中' : item.status == 2 ? '已完成' : item.status == 4 ? '已取消' : item.status == 5 ? '已关闭' : ''}}</view>
-                </view>
-
-                <view class="new_p2" style="margin-top:30rpx;">
-                    <view class="new_p2_gray">客户名称：</view>
-                    <view class="new_p2_black">{{item.company_name}}</view>
-                </view>
-
-                <view class="new_p2" style="margin-top:30rpx;">
-                    <view class="new_p2_gray">预约时间：</view>
-                    <view class="new_p2_black">{{item.time}}</view>
-                </view>
-
-                <view class="new_p2" style="margin-top:30rpx;">
-                    <view class="new_p2_gray">客户地址：</view>
-                    <view class="new_p2_black">{{item.address}}</view>
-                </view>
-
-                <view class="new_p2" style="margin-top:30rpx;">
-                    <view class="new_p2_gray">工单编号：</view>
-                    <view class="new_p2_black">{{item.order_num}}</view>
-                </view>
-
-                <view class="new_line"></view>
-
-                <view class="new_p3" wx:if="{{role == 0 && item.status == 1}}">
-                    <view class="new_p3_more_view"></view>
-                    <view class="new_p3_right">
-                      <view class="new_p3_2" wx:if="{{item.is_send_order != 1}}" catch:tap="bindCloseOrder" data-id="{{item.order_num}}">关闭工单</view>
-                      <view class="new_p3_2" wx:if="{{item.is_send_order != 1}}" catch:tap="bindUpdateOrder" data-id="{{item.order_num}}">修改工单</view>
-                      <view class="new_p3_1" bindtap="formSubmit" data-value="2" data-feedback="{{item.processing_feedback}}" data-scenepic="{{item.scene_pic}}">完成服务</view>
-                    </view>
-                </view>
-
-                <view class="new_p3" wx:if="{{role == 1 && item.status == 1}}">
-                    <view class="new_p3_more_view"></view>
-                    <view class="new_p3_right">
-                      <view class="new_p3_2" catch:tap="bindCloseOrder" data-id="{{item.order_num}}">关闭工单</view>
-                      <view class="new_p3_2" catch:tap="bindUpdateOrder" data-id="{{item.order_num}}">修改工单</view>
-                      <view class="new_p3_1" bindtap="formSubmit" data-value="2" data-feedback="{{item.processing_feedback}}" data-scenepic="{{item.scene_pic}}">完成服务</view>
-                    </view>
-                </view>
-
-                <view class="new_p3" wx:if="{{item.status == 2}}">
-                    <view class="new_p3_more_view"></view>
-                    <view class="new_p3_right">
-                        <view class="new_p3_2" catch:tap="toInfo" data-id = "{{item.id}}" data-type="{{item.type}}" style="margin-right: 0rpx;">查看详情</view>
-                    </view>
-                </view>
-
-                <view class="new_p3" wx:if="{{item.status == 5}}">
-                    <view class="new_p3_more_view"></view>
-                    <view class="new_p3_right">
-                        <view class="new_p3_2" catch:tap="deleteInfo" data-id = "{{item.order_num}}" style="margin-right: 0rpx;">删除</view>
-                    </view>
-                </view>
-            </view>
-        </block>
-        
-        <view wx:if="{{alreadyChecked}}">
-            <image class="app_noinfo_img" src="../../image/nodata.png" mode="widthFix"></image>
-            <view class="app_noinfo_desc">{{tip_temp}}</view>
-        </view>
-        <view wx:if="{{alreadyChecked_temp}}" style="margin-top: 20rpx;">
-            <!-- <image class="app_noinfo_img" src="../../image/nodata.png" mode="widthFix"></image> -->
-            <view class="app_noinfo_desc">{{tip}}</view>
-        </view>
-    </view>
-
-    <view class="app_bottom_view"></view>
-</view>
-
-<!-- 弹框 -->
-<dialog-cus showDialog='{{showDialog}}' datas="{{dialogData}}" catch:dialogCancel="dialogCancel" catch:dialogSure="dialogSure"/>
-
-<!-- 弹框 -->
-<dialog-cus showDialog='{{deleteShowDialog}}' datas="{{deleteDialogData}}" catch:dialogCancel="deleteDialogCancel" catch:dialogSure="deleteDialogSure"/>
-
-
-<!-- 弹框 -->
-<dialog-cus showDialog='{{showCloseDialog}}' datas="{{dialogCloseData}}" catch:dialogCloseCancel="dialogCloseCancel" catch:dialogCloseSure="dialogCloseSure" types="1"/>
-
-
-<!-- <scroll-view scroll-x class="bg-white nav text-center"
+<scroll-view scroll-x class="bg-white nav text-center"
   style="background-color: #FFF;position:fixed;top:10%;z-index:9999;">
   <view class="cu-item {{index==TabCur?'text-blue cur':''}}" wx:for="{{statusList}}" wx:key bindtap="tabSelect"   data-id="{{index}}">
     {{statusList[index]}}
@@ -122,6 +24,7 @@
             <image src="../../image/reagent.png" class='img' />试剂培训</view>
             <view class="title" wx:if="{{item.type==5}}">
                 <image src="../../image/phone.png" class='img' />远程服务</view>
+          <!-- <view style="text-align: right;margin-right: 2%;color:#C1C1C1;width: 60%;">></view> -->
           <text class="cuIcon-right lg text-gray" style="text-align:right;width:60%;margin-right: 5%;"></text>
         </view>
         <view class="P2_1 app_flex">
@@ -149,4 +52,4 @@
             <view class="app_noinfo_desc">{{tip_temp}}</view>
         </view>
   </view>
-</view> -->
+</view>
