--- a/pages/myOrder/myOrder.wxml
+++ b/pages/myOrder/myOrder.wxml
@@ -46,7 +46,7 @@
                     <view class="new_p3_more_view"></view>
                     <view class="new_p3_right">
                       <view class="new_p3_2" wx:if="{{item.is_send_order != 1}}" catch:tap="bindCloseOrder" data-id="{{item.order_num}}">关闭工单</view>
-                      <view class="new_p3_2" wx:if="{{item.is_send_order != 1}}" catch:tap="bindUpdateOrder" data-id="{{item.order_num}}">修改工单</view>
+                      <view class="new_p3_2" wx:if="{{item.is_send_order != 1}}" catch:tap="bindUpdateOrder" data-id="{{item.id}}" data-ordernum="{{item.order_num}}">修改工单</view>
                       <view class="new_p3_1" bindtap="formSubmit" data-value="2" data-feedback="{{item.processing_feedback}}" data-scenepic="{{item.scene_pic}}">完成服务</view>
                     </view>
                 </view>
@@ -55,7 +55,7 @@
                     <view class="new_p3_more_view"></view>
                     <view class="new_p3_right">
                       <view class="new_p3_2" catch:tap="bindCloseOrder" data-id="{{item.order_num}}">关闭工单</view>
-                      <view class="new_p3_2" catch:tap="bindUpdateOrder" data-id="{{item.order_num}}">修改工单</view>
+                      <view class="new_p3_2" catch:tap="bindUpdateOrder" data-id="{{item.id}}" data-ordernum="{{item.order_num}}">修改工单</view>
                       <view class="new_p3_1" bindtap="formSubmit" data-value="2" data-feedback="{{item.processing_feedback}}" data-scenepic="{{item.scene_pic}}">完成服务</view>
                     </view>
                 </view>
